service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: DRONE_REPO_NAME-service
  name: DRONE_REPO_NAME-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
     app: DRONE_REPO_NAME-deployment
